--- a/Phaser/template.html
+++ b/Phaser/template.html
@@ -24,10 +24,62 @@ function preload() {
 }
 
 function create() {
-	game.add.sprite(0, 0, 'star');
+	game.physics.startSystem(Phaser.Physics.ARCADE);
+	game.add.sprite(0, 0, 'sky');
+
+   //Making group of platforms
+	platforms = game.add.physicsGroup();
+	platforms.enableBody = true;
+
+   //Make the Ground
+	var ground = platforms.create(0, game.world.height - 50, 'ground');
+	ground.scale.setTo(2,2);
+	ground.body.immovable = true;
+
+	//Ledges
+	var ledge = platforms.create(400,400, 'ground');
+	ledge.body.immovable = true;
+	ledge = platforms.create(-150,250,'ground');
+	ledge.body.immovable = true;
+
+	//Player 
+	player = game.add.sprite(32,game.world.height - 220, 'dude');
+	player.animations.add('left',[0,1,2,3],10,true);
+	player.animations.add('right',[5,6,7,8],10,true);
+	game.physics.arcade.enable(player);
+	//player physics properties. 
+	player.body.bounce.y = 0.2;
+	player.body.collideWorldBounds = true;
+
+	//Create keyboard entry
+	cursors = game.input.keyboard.CreateCursorKeys();
+
 }
 
 function update() {
+	//Collide player with the platforms
+	game.physics.arcade.collide(player, platforms);
+    //Reset the player's velocity 
+	player.body.velocity.x = 0;
+
+	if(cursors.left.isDown){
+		//Move to left
+		player.body.velocity.x = -150;
+		player.animations.play('left');
+	} else if(cursors.right.isDown){
+		player.body.velocity.x = 150;
+		player.animations.play('right');	
+	}else{
+		//stand still
+		player.animations.stop();
+		player.frame = 4 ;
+	}
+
+	//Allow the player to jump only if they are touching the ground.
+	if(cursors.up.isDown && player.body.touching.down){
+		player.body.velocity.y = -350;
+	}
+
 }
 
 </script>
