--- a/Phaser/template.html
+++ b/Phaser/template.html
@@ -52,7 +52,7 @@ function create() {
 	player.body.collideWorldBounds = true;
 
 	//Create keyboard entry
-	cursors = game.input.keyboard.CreateCursorKeys();
+	cursors = game.input.keyboard.createCursorKeys();
 
 }
 
